# AeroUp

./: .gitignore  AUTHORS.md  ChangeLog  Makefile.am  Makefile.in  NEWS.md  README  README.md  THANKS  THANKS.md  configure  configure.ac
dev/: createMan.sh  updateVersion.sh
man/: aeroup.man  aeroup.man.html  aeroup.man.txt  man.html
src/: Makefile.am  Makefile.in  buffer.cpp  buffer.hpp  buffermanager.cpp  buffermanager.hpp  config.h.in  define_ultimate_fct.h  gloInterface.hpp  global.hpp  gloseq.cpp  gloseq.hpp  main.cpp  main.hpp  optmanager.cpp  optmanager.hpp  regboost.cpp  regboost.hpp  reglinux.cpp  reglinux.hpp  rules.cpp  rules.hpp  ruleserror.hpp  serialboost.cpp  serialboost.hpp  seriallinux.cpp  seriallinux.hpp  serialprop.cpp  serialprop.hpp  symlink.cpp  symlink.hpp  ultimate.cpp  ultimate.hpp
udev/: 60-aeroup.rules  Makefile.am  Makefile.in
